--- a/.github/workflows/main_karan.yml
+++ b/.github/workflows/main_karan.yml
@@ -1,24 +1,24 @@
 name: CI
 
-on: [push]
+on: [push, pull_request]
 
-jobs: 
-    sast_scan: 
-        name: Run Bandit scan
-        runs-on: ubuntu-latest
+jobs:
+  sast_scan:
+    name: Run Bandit SAST Scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-        steps: 
-          - name: Checkout code
-            uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-          - name: setup uo python
-            uses: actions/setup-python@v2
-            with:
-              python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install bandit
 
-          - name: Install bandit
-            run: pip install bandit commit
-
-          - name: Run Bandit Scan
-            run: bandit -r .
-              
+      - name: Run Bandit Scan
+        run: bandit -r .
