--- a/.github/workflows/main_karan.yml
+++ b/.github/workflows/main_karan.yml
@@ -22,3 +22,11 @@ jobs:
 
       - name: Run Bandit Scan
         run: bandit -ll -ii -r . -f json -o bandit-report.json
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifacts@v3
+        if: always()
+        with: 
+          name: bandit-findings
+          path: bandit-reports.json
+          
