--- a/.github/workflows/main_karan.yml
+++ b/.github/workflows/main_karan.yml
@@ -52,4 +52,4 @@ jobs:
           curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
           sh install-scout.sh
           docker scout quickview
-          socker scout cves
+          docker scout cves
