--- a/.github/workflows/main_karan.yml
+++ b/.github/workflows/main_karan.yml
@@ -1,55 +1,53 @@
 name: CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
-  sast_scan:
-    name: Run Bandit SAST Scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+ sast_scan:
+   name: Run Bandit Scan
+   runs-on: ubuntu-latest
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+   steps:
+   - name: Checkout code
+     uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install bandit
+   - name: Set up Python
+     uses: actions/setup-python@v2
+     with:
+       python-version: 3.8
 
-      - name: Run Bandit Scan
-        run: bandit -ll -ii -r . -f json -o bandit-report.json
+   - name: Install Bandit
+     run: pip install bandit
 
-      - name: Upload Artifacts
-        uses: actions/upload-artifacts@v3
-        if: always()
-        with: 
-          name: bandit-findings
-          path: bandit-report.json
+   - name: Run Bandit Scan
+     run: bandit -ll -ii -r . -f json -o bandit-report.json
 
-  image_scan:
-    name: Build Image and Run Image Scan
-    runs-on: ubuntu-latest
-    
-    steps: 
-    
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Set up Docker
-        uses: docker-practice/actions-setup-docker@v1
-        with: 
-          docker_version: '20.10.7'
-      
-      - name: Build Docker Image
-        run: docker build -f Dockerfile -t myapp:latest .    
-    
-      - name: Docker Scout Scan
-        run: |
-          curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
-          sh install-scout.sh
-          docker scout quickview
-          docker scout cves
+   - name: Upload Artifact
+     uses: actions/upload-artifact@v3
+     if: always()
+     with:
+      name: bandit-findings
+      path: bandit-report.json
+
+ image_scan:
+   name: Build Image and Run Image Scan
+   runs-on: ubuntu-latest
+
+   steps:
+   - name: Checkout code
+     uses: actions/checkout@v2
+
+   - name: Set up Docker
+     uses: docker-practice/actions-setup-docker@v1
+     with:
+      docker_version: '20.10.7'
+
+   - name: Build Docker Image
+     run: docker build -f Dockerfile -t myapp:latest .
+ 
+   - name: Docker Scout Scan
+     run: |
+        curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
+        sh install-scout.sh
+        docker scout quickview
+        docker scout cves
