--- a/.github/workflows/main_karan.yml
+++ b/.github/workflows/main_karan.yml
@@ -30,33 +30,35 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      
       - name: Set up Docker
-        uses: docker-practice/actions-setup-docker@v1
-        with:
-          docker_version: '20.10.7'
+        uses: docker/setup-buildx-action@v1
+      
       - name: Build Docker Image
-        run: docker build -f Dockerfile -t myapp:latest .
-      # - name: Docker Scout Scan
-      #   run: |
-      #     curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
-      #     sh install-scout.sh
-
-      #     echo ${{secrets.REPO_PWD}} | docker login -u ${{secrets.REPO_USER}} --password-stdin
-
-      #     docker scout quickview
-      #     docker scout cves
+        run: |
+          docker build -f Dockerfile -t myapp:latest .
+          docker images
+      
+      - name: Debug - List Docker images
+        run: docker images
+      
+      - name: Debug - Docker info
+        run: docker info
+      
       - name: Docker Scout Scan
         uses: docker/scout-action@v1.0.9
         with:
-         dockerhub-user: ${{ secrets.REPO_USER }}
-         dockerhub-password: ${{ secrets.REPO_PWD }}
-         command: quickview,cves
-         only-severities: critical,high
-         sarif-file: scout-report.sarif
-    
+          dockerhub-user: ${{ secrets.REPO_USER }}
+          dockerhub-password: ${{ secrets.REPO_PWD }}
+          command: quickview,cves
+          only-severities: critical,high
+          sarif-file: scout-report.sarif
+        env:
+          DOCKER_SCOUT_CACHE_DIR: /tmp/docker-scout-cache
+      
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         if: always()
         with:
-         name: docker-scout-findings
-         path: scout-report.sarif
+          name: docker-scout-findings
+          path: scout-report.sarif
